<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@android:color/holo_green_light">

    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <ImageView android:layout_width="0dp" android:layout_height="wrap_content" android:src="@drawable/office38" android:layout_weight="50"
                   android:contentDescription="@string/person_image"/>
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical" android:layout_weight="50">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_name"/>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:id="@+id/cs_login"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pass"/>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:id="@+id/cs_pass"/>
        </LinearLayout>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="invisible" android:id="@+id/ci_id"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="invisible" android:id="@+id/ci_class_id"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/family"/>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:layout_weight="100" android:id="@+id/cs_fio"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name"/>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:layout_weight="100"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otch"/>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:layout_weight="100"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone"/>
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="text" android:layout_weight="100"/>
    <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enable_in_test" android:id="@+id/cb_enable_testing"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save_button" android:onClick="onSaveClick"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel_button" android:onClick="OnCancelClick"/>
    </LinearLayout>

</LinearLayout>